[package]
name = "subrut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
subrut = "src/lib.rs"

[dependencies]
trust-dns-resolver = "0.21.2"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.0"
structopt = "0.3.26"