[package]
name = "subrut"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "The super fast tool for brute forcing subdomains."
exclude=[".DS_Store"]
repository = "https://github.com/arg2u/subrut"
documentation="https://docs.rs/subrut"
keywords = ["hacking", "dns", "bruteforce","subdomain"]

[lib]
name = "subrut"
subrut = "src/lib.rs"
doctest = true
doc = true
crate-type = ["lib"]

[dependencies]
trust-dns-resolver = "0.21.2"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.0"
structopt = "0.3.26"
serde = {version="1.0.143", features = ["derive"]}
anscape = "0.2.2"
serde_json = "1.0"